--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -4,6 +4,14 @@ html, body {
   padding: 0;
 }
 
+.bg-dark {
+  background-color: rgb(233, 136, 10) !important;
+}
+
+.fas {
+  color: white;
+}
+
 .save-note {
   display: none;
 }
@@ -29,7 +37,7 @@ html, body {
 }
 
 .note-title {
-  height: 50px;
+  height: 60px;
   margin-top: 13px;
   font-size: 3rem;
 }
